--- a/src/styles/projets.css
+++ b/src/styles/projets.css
@@ -411,8 +411,11 @@ div.active_projet {
 
 @media screen and (max-width:424px){
 
+    .description_projet{
+        font-size: 17px;
+    }
     .skills_container{
-        gap:2px;
+        gap:10px;
         align-items: start;
         justify-content: center;
     }
@@ -435,7 +438,12 @@ div.active_projet {
         font-size: 0.8rem;
     }
 
+    .main_content_container{
+        width: 100%;
+    }
+
     .details{
+        width: 100%;
         height: auto;
         font-size: 1rem;
         overflow: none;
@@ -452,6 +460,11 @@ div.active_projet {
 
     h6{
         font-size: 1.3rem;
+    }
+
+    .PROJET_img{
+        width:100% !important;
+        height: 300px;
     }
 }
 
